[project]
name = "rate-limiter"
version = "0.1.0"
description = ""
authors = [
    {name = "kanhaya kumar yadav",email = "kanhayaky120@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "rate_limiter"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
